@@ -2702,7 +2702,7 @@ Tcl_GetClassAsObject(
     return (Tcl_Object) ((Class *)clazz)->thisPtr;
 }
 
-Tcl_ObjectMapMethodNameProc
+Tcl_ObjectMapMethodNameProc *
 Tcl_ObjectGetMethodNameMapper(
     Tcl_Object object)
 {
@@ -2712,7 +2712,7 @@ Tcl_ObjectGetMethodNameMapper(
 void
 Tcl_ObjectSetMethodNameMapper(
     Tcl_Object object,
-    Tcl_ObjectMapMethodNameProc mapMethodNameProc)
+    Tcl_ObjectMapMethodNameProc *mapMethodNameProc)
 {
     ((Object *) object)->mapMethodNameProc = mapMethodNameProc;
 }
