@@ -97,12 +97,12 @@ declare 23 generic {
 	    int skip)
 }
 declare 24 generic {
-    Tcl_ObjectMapMethodNameProc Tcl_ObjectGetMethodNameMapper(
+    Tcl_ObjectMapMethodNameProc *Tcl_ObjectGetMethodNameMapper(
 	    Tcl_Object object)
 }
 declare 25 generic {
     void Tcl_ObjectSetMethodNameMapper(Tcl_Object object,
-	    Tcl_ObjectMapMethodNameProc mapMethodNameProc)
+	    Tcl_ObjectMapMethodNameProc *mapMethodNameProc)
 }
 declare 26 generic {
     void Tcl_ClassSetConstructor(Tcl_Interp *interp, Tcl_Class clazz,
@@ -164,14 +164,14 @@ declare 8 generic {
 }
 declare 9 generic {
     Tcl_Method TclOONewProcInstanceMethodEx(Tcl_Interp *interp,
-	    Tcl_Object oPtr, TclOO_PreCallProc preCallPtr,
-	    TclOO_PostCallProc postCallPtr, ProcErrorProc *errProc,
+	    Tcl_Object oPtr, TclOO_PreCallProc *preCallPtr,
+	    TclOO_PostCallProc *postCallPtr, ProcErrorProc *errProc,
 	    ClientData clientData, Tcl_Obj *nameObj, Tcl_Obj *argsObj,
 	    Tcl_Obj *bodyObj, int flags, void **internalTokenPtr)
 }
 declare 10 generic {
     Tcl_Method TclOONewProcMethodEx(Tcl_Interp *interp, Tcl_Class clsPtr,
-	    TclOO_PreCallProc preCallPtr, TclOO_PostCallProc postCallPtr,
+	    TclOO_PreCallProc *preCallPtr, TclOO_PostCallProc *postCallPtr,
 	    ProcErrorProc *errProc, ClientData clientData, Tcl_Obj *nameObj,
 	    Tcl_Obj *argsObj, Tcl_Obj *bodyObj, int flags,
 	    void **internalTokenPtr)
